--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ button:hover {
   background-repeat: no-repeat;
   width: 15%;
   right: 5%;
+  padding-left: 1000px;
   height: 13% !important;
 }
 
