--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
-body,
-html {
+body {
   overflow: hidden;
   margin: 0 auto;
   padding: 0;
   height: 100%;
-}
-
-img:hover {
-  cursor: pointer;
+  width: 100vw;
 }
 
 #wrapper {
@@ -15,19 +11,17 @@ img:hover {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  width: 101%;
+  background-position: center;
+  width: 100%;
   height: 100vh;
 }
 
 #graffitiContainer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  float: right;
   width: 700px;
   height: 540px;
+  margin-top: 320px;
+  margin-right: 40%;
 }
 
 #canWrapper {
@@ -36,6 +30,13 @@ img:hover {
   height: 180px;
   bottom: -15px;
   left: 12%;
+}
+
+#one,
+#two,
+#three,
+#light:hover {
+  cursor: pointer;
 }
 
 #one {
@@ -49,7 +50,9 @@ img:hover {
 }
 
 #light {
-  float: right;
+  position: absolute;
+  right: 0;
+  margin-right: 5%;
   height: 150px;
   aspect-ratio: 2/1;
 }
@@ -64,8 +67,8 @@ img:hover {
 
 .graffiti {
   position: absolute;
-  width: 70%;
-  height: 100%;
+  width: inherit;
+  height: inherit;
 }
 
 .policeLights {
@@ -78,4 +81,10 @@ img:hover {
   position: absolute;
   width: 80px;
   aspect-ratio: 1/2.1;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 }
